TEST_PROGRAMS/VALID/05/if_stmt_else_reg_brace.go
/* If statements */

package main

func main() {
	x := true

	if z:= true; x {
		println(z)
	} else {
		println(x)
	}

}
