TEST_PROGRAMS/INVALID/03/invalid_print2.go
package main

func f() {

	if x { 

		id = 123;
		// assigning printed to id
		println("my id:",a)
		id = println("a")
	}
}
